// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`Workflow basic usage 1`] = `
[
  {
    "dependencies": [],
    "description": "aaaa",
    "isSaga": false,
    "node": "a",
    "schema": {
      [Symbol(TypeBox.Kind)]: "Number",
      "type": "number",
    },
    "title": "a",
  },
  {
    "dependencies": [
      "a",
    ],
    "description": undefined,
    "isSaga": false,
    "node": "b",
    "schema": {
      [Symbol(TypeBox.Kind)]: "String",
      "type": "string",
    },
    "title": undefined,
  },
  {
    "dependencies": [
      "a",
    ],
    "description": undefined,
    "isSaga": false,
    "node": "c",
    "schema": {
      [Symbol(TypeBox.Kind)]: "Boolean",
      "type": "boolean",
    },
    "title": undefined,
  },
  {
    "dependencies": [
      "b",
      "c",
    ],
    "description": undefined,
    "isSaga": false,
    "node": "d",
    "schema": {
      [Symbol(TypeBox.Kind)]: "Object",
      "properties": {
        "flag": {
          [Symbol(TypeBox.Kind)]: "Boolean",
          "type": "boolean",
        },
        "value": {
          [Symbol(TypeBox.Kind)]: "Number",
          "type": "number",
        },
      },
      "required": [
        "value",
        "flag",
      ],
      "type": "object",
    },
    "title": undefined,
  },
]
`;

exports[`Workflow basic usage 2`] = `
[
  "b",
  "c",
]
`;

exports[`Workflow basic usage 3`] = `
{
  "a": {
    "status": "done",
    "value": 1,
  },
  "b": {
    "status": "done",
    "value": "hello 1",
  },
  "c": {
    "status": "done",
    "value": true,
  },
  "d": {
    "status": "done",
    "value": {
      "flag": true,
      "value": 7,
    },
  },
}
`;

exports[`Workflow basic step 1`] = `
[
  "a",
  "b",
  "c",
  "d",
]
`;

exports[`Workflow basic step 2`] = `
[
  "b",
  "c",
]
`;

exports[`Workflow basic step 3`] = `
{
  "a": {
    "status": "done",
    "value": 1,
  },
  "b": {
    "status": "done",
    "value": "hello 1",
  },
  "c": {
    "status": "intr",
    "step": {
      "deadline": 1704067200000,
      "description": "Enter a number",
      "key": [
        "c",
        "need_number",
      ],
      "schema": {
        [Symbol(TypeBox.Kind)]: "Object",
        "properties": {
          "x": {
            [Symbol(TypeBox.Kind)]: "Number",
            "title": "sweet number",
            "type": "number",
          },
        },
        "required": [
          "x",
        ],
        "type": "object",
      },
      "title": "Enter a number",
    },
  },
  "d": {
    "nodes": [
      "c",
    ],
    "status": "pending",
  },
}
`;

exports[`Workflow basic step 4`] = `
{
  "a": {
    "status": "done",
    "value": 1,
  },
  "b": {
    "status": "done",
    "value": "hello 1",
  },
  "c": {
    "status": "done",
    "value": true,
  },
  "d": {
    "status": "done",
    "value": {
      "flag": true,
      "value": 7,
    },
  },
}
`;

exports[`Workflow basic step 5`] = `
{
  "a": {
    "status": "done",
    "value": 1,
  },
  "b": {
    "status": "done",
    "value": "hello 1",
  },
  "c": {
    "error": [AssertError: Expected required property],
    "status": "err",
  },
  "d": {
    "nodes": [
      "c",
    ],
    "status": "pending",
  },
}
`;

exports[`Workflow basic step 6`] = `
[
  {
    "c": {
      "deadline": 1704067200000,
      "description": "Enter a number",
      "key": "need_number",
      "schema": {
        [Symbol(TypeBox.Kind)]: "Object",
        "properties": {
          "x": {
            [Symbol(TypeBox.Kind)]: "Number",
            "title": "sweet number",
            "type": "number",
          },
        },
        "required": [
          "x",
        ],
        "type": "object",
      },
      "title": "Enter a number",
    },
    "k": [
      "c",
      "need_number",
    ],
    "v": {
      "y": 2,
    },
  },
]
`;

exports[`saga function should should tell which events are consumed and ignore irrelevant events 1`] = `
[
  [
    {
      "firstNumber": 3,
      "secondNumber": 4,
    },
    {
      "description": "Enter new pair",
      "key": "numbers",
      "schema": {
        [Symbol(TypeBox.Kind)]: "Object",
        "properties": {
          "firstNumber": {
            [Symbol(TypeBox.Kind)]: "Number",
            "description": "First number",
            "type": "number",
          },
          "secondNumber": {
            [Symbol(TypeBox.Kind)]: "Number",
            "description": "Second number",
            "type": "number",
          },
        },
        "required": [
          "firstNumber",
          "secondNumber",
        ],
        "type": "object",
      },
    },
  ],
  [
    {
      "firstNumber": 2,
      "secondNumber": 3,
    },
    {
      "description": "Enter new pair",
      "key": "numbers",
      "schema": {
        [Symbol(TypeBox.Kind)]: "Object",
        "properties": {
          "firstNumber": {
            [Symbol(TypeBox.Kind)]: "Number",
            "description": "First number",
            "type": "number",
          },
          "secondNumber": {
            [Symbol(TypeBox.Kind)]: "Number",
            "description": "Second number",
            "type": "number",
          },
        },
        "required": [
          "firstNumber",
          "secondNumber",
        ],
        "type": "object",
      },
    },
  ],
]
`;
